syntax = "proto3";

package ipc.v1;

service ExtensionService {
    rpc GetWorkspaceAuthInfo (GetWorkspaceAuthInfoRequest) returns (GetWorkspaceAuthInfoResponse) {}
    rpc Ping (PingRequest) returns (PingResponse) {}
}

message PingRequest {}
message PingResponse {}

message GetWorkspaceAuthInfoRequest {
    string workspace_id = 1;
    string gitpod_host = 2;
}

message GetWorkspaceAuthInfoResponse {
    string workspace_id = 1;
    string instance_id = 2;
    string workspace_host = 3;
    string owner_token = 4;
    string gitpod_host = 5;
    string user_id = 6;
    string sshkey = 7;
    string phase = 8;
    string username = 9;
}
